Thu Feb 11 21:43:37 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector:
        * tools/odds_dissector/README:
        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_dissector.mpc:

          Initial commit of dissector for wireshark support.

Wed Feb 10 22:38:46 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * java/build_scripts/JavaTypeSupportImpl.pm:

          Fixed a bug that generates incorrect jni class name when the
          module name contains underscore and causes UnsatisfiedLinkError.
          The "_1" needs be used to replace the underscore.

        * java/tests/complex_idl/ComplexIDLTest.java:
        * java/tests/complex_idl/Complex_Idl.idl:
        * java/tests/complex_idl/QuoteSupport.java:
        * java/tests/complex_idl/complex_idl_test.mpc:
        * java/tests/complex_idl/Complex.idl:

          Renamed Complex.idl to Complex_Idl.idl file and changed
          module name from Complex to Complex_Idl to verify the bug fix.

Wed Feb 10 21:55:26 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/codegen/im_java.cpp:

          For IDL unions without an explicit default that need a generated
          default (because the branches don't cover all possible discriminator
          values), if the discriminator type is an enum we need to wrap the
          primitive (int) value of the enum in the Java object for the enum.

Wed Feb 10 00:11:21 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/tests/thru/pub-*-*-*.ini:
        * performance-tests/Bench/tests/thru/pub-*-*.ini:
        * performance-tests/Bench/tests/thru/sub-*.ini:

          New set of tests for publication bound and subscription bound
          throughput testing.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Added documentation of new publication bound and subscription
          bound tests.
