@@ -1,3 +1,10 @@
+Thu Feb 11 21:51:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/odds_dissector/odds_dissector.cpp:
+        * tools/odds_dissector/odds_dissector.mpc:
+
+          Corrected linkage for callbacks.
+
 Thu Feb 11 21:43:37 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * tools/odds_dissector:
